# migratron

./: .pylintrc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pylint.yml  test.yml
core/databases/: interface.py
migratron/: __init__.py  cli.py  configuration_parser.py  migration_engine.py
migratron/commands/: downgrade_command.py  generate_command.py  init_command.py  list_commands.py  upgrade_command.py
migratron/core/: logger.py
migratron/databases/: postgres.py  services.py  type_enum.py
migropy/: __init__.py  cli.py  configuration_parser.py  migration_engine.py
migropy/commands/: command.py  downgrade_command.py  generate_command.py  init_command.py  list_commands.py  upgrade_command.py
migropy/databases/: services.py
tests/: utils.py
tests/unit/: test_init_command.py  test_list_command.py
