[project]
name = "migratron"
version = "0.1.0"
description = ""
authors = [
    {name = "fredimatteo",email = "matteofredi.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.0"
dependencies = [
    "psycopg (>=3.2.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
