[project]
name = "migratron"
version = "0.0.1-rc10"
description = ""
authors = [
    {name = "fredimatteo",email = "matteofredi.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.0"
dependencies = [
    "psycopg (>=3.2.6,<4.0.0)",
    "bump-my-version (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"

[tool.poetry]
packages = [{include = "migratron", from = "."}, {include = "migratron"}]
exclude = ["tests", "docs", ".github", ".gitignore", "pyproject.toml", "README.md"]

[tool.poetry.scripts]
migratron = "migratron.cli:main"